# hw0

./: CMakeLists.txt  README.md  generate_submission.sh  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/alpine/: devcontainer.json
src/: CMakeLists.txt  insertion_sort.cpp
